# tifresi

./: .gitignore  README.md  demo-mel-spectrogram.ipynb  demo-phase-gradient.ipynb  handling-the-phase.ipynb  pyproject.toml
.github/workflows/: test.yml
ltfatpy/: .coveragerc  .gitignore  .gitlab-ci.yml  HISTORY.rst  MANIFEST.in  copyright.py  copyrightstamp.txt  setup.py
ltfatpy/doc/: install.rst
ltfatpy/docker/: Dockerfile_X86_64  Dockerfile_cython_X86_64  Dockerfile_i686
ltfatpy/ltfat_C_kernel/tests/: CMakeLists.txt  test.c  test_signal.c
ltfatpy/ltfatpy/comp/: comp_dct.c  comp_dst.c  comp_gabdual_long.c  comp_gabtight_long.c  comp_isepdgt.c  comp_isepdgtreal.c  comp_pgauss.c  comp_sepdgt.c  comp_sepdgtreal.c
ltfatpy/ltfatpy/tests/datasets/: comp_dct_signal_ex.mat  comp_dst_signal_ex.mat  dft_ref.mat  dgt_signal_ex.mat  fftreal_ref.mat  fftresample_ref.mat  firkaiser_ref.mat  gabframediag_signal_ex.mat  gabphasegrad_ref.mat  gabtight_signal_ex.mat  greasy_ref.mat  groupthresh_ref.mat  gspi_ref.mat  idft_ref.mat  ifftreal_ref.mat  instfreqplot_ref.mat  largestn_ref.mat  largestr_ref.mat  linus_ref.mat  pderiv_ref.mat  phaselock_ref.mat  phaseplot_ref.mat  phaseunlock_ref.mat  read_ref_mat_test.mat  s0_norm_test.mat  sepdgt_signal_ex.mat  sgram_ref.mat  thresh_ref.mat
tifresi/: hparams.py  stft.py  utils.py
tifresi/tests/: test_stft.py  test_transforms.py
