[tool.poetry]
name = "tifresi"
version = "0.1.6"
description = "Time Frequency Spectrogram Inversion"
authors = ["Andrés Marafioti, Nathanael Perraudin, Nicki Hollighaus"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
Cython = "*"
numba = "*"
numpy = "*"
librosa = "*"
matplotlib = "*"
ltfatpy = {path = "ltfatpy", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
jupyterlab = "*"
twine = "*"
setuptools = "*"
wheel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
